2012-11-14  Jakub Jelinek  <jakub@redhat.com>

	* lib/asan-dg.exp: New file.
	* gcc.dg/asan/asan.exp: New file.
	* g++.dg/dg.exp: Prune also asan tests.
	* g++.dg/asan/asan.exp: New file.
	* c-c++-common/asan/memcmp-1.c: New test.

2013-04-03  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/56501
	* gcc.dg/torture/pr56501.c: New testcase.

2012-09-07  Richard Earnshaw  <rearnsha@arm.com>

	* gcc.target/arm/pr50318-1.c: Scan for smlal.
	* gcc.target/arm/smlaltb-1.c: XFAIL test.
	* gcc.target/arm/smlaltt-1.c: Likewise.

2012-08-20  Richard Earnshaw  <rearnsha@arm.com>

	PR tree-ssa/54295
	* gcc.c-torture/execute/20120817-1.c: New test.

2013-05-15  Richard Sandiford  <rdsandiford@googlemail.com>

	PR target/57260
	* gcc.target/mips/call-1.c: Restrict to o32.
	* gcc.target/mips/call-5.c, gcc.target/mips/call-6.c: New test.

2012-12-03  Richard Biener  <rguenther@suse.de>

	* gcc.dg/torture/pr35634.c: Use signed char.
	* g++.dg/torture/pr35634.C: Likewise.

2013-01-22  Jakub Jelinek  <jakub@redhat.com>

	PR target/55686
	* gcc.target/i386/pr55686.c: New test.

2012-12-20  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/55750
	* gcc.c-torture/execute/pr55750.c: New test.

2012-11-28  Richard Biener  <rguenther@suse.de>

	PR c/35634
	* gcc.dg/torture/pr35634.c: New testcase.
	* g++.dg/torture/pr35634.C: Likewise.
	* gcc.dg/vect/pr18536.c: Mark worker function noinline.

2012-06-25  Matthew Gretton-Dann  <matthew.gretton-dann@arm.com>
	    James Greenhalgh  <james.greenhalgh@arm.com>

	* gcc.target/arm/ftest-support-arm.h New testcase.
	* gcc.target/arm/ftest-support-thumb.h Likewise.
	* gcc.target/arm/ftest-support.h Likewise.
	* gcc.target/arm/ftest-armv4-arm.c: Likewise.
	* gcc.target/arm/ftest-armv4t-arm.c: Likewise.
	* gcc.target/arm/ftest-armv4t-thumb.c: Likewise.
	* gcc.target/arm/ftest-armv5t-arm.c Likewise.
	* gcc.target/arm/ftest-armv5t-thumb.c Likewise.
	* gcc.target/arm/ftest-armv5te-arm.c: Likewise.