@@ -1,3 +1,9 @@
+2012-11-17  Jakub Jelinek  <jakub@redhat.com>
+
+	* lib/asan-dg.exp (asan_symbolize): Prune BFD: prefixed error messages
+	from addr2line_output.  Increment idx if asking for more than one address
+	in one object.
+
 2012-11-14  Jakub Jelinek  <jakub@redhat.com>
 
 	* lib/asan-dg.exp: New file.
